--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/drunken005/acccount-password/issues"
   },
-  "homepage": "https://github.com/drunken005/acccount-password#readme"
+  "homepage": "https://github.com/drunken005/acccount-password#readme",
+  "dependencies": {
+    "bcrypt": "^3.0.2",
+    "create-hash": "^1.2.0",
+    "lodash": "^4.17.11",
+    "parameter": "^3.3.1",
+    "randomstring": "^1.1.5",
+    "sha256": "^0.2.0"
+  }
 }
